--- a/.github/workflows/build.release.yml
+++ b/.github/workflows/build.release.yml
@@ -27,6 +27,6 @@ jobs:
           push: true
           tags: |
             bigbluebutton/greenlight:latest
-            bigbluebutton/greenlight:v2
+            rezaejteh/greenlight:latest
             bigbluebutton/greenlight:${{ github.event.release.tag_name }}
           build-args: version_code=${{ github.event.release.tag_name }}
